// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assessment Assessment component 1`] = `
<div
  className="component obojobo-draft--sections--assessment"
  data-focussed={false}
  data-id="assessment"
  data-obo-component={true}
  data-type="ObojoboDraft.Sections.Assessment"
  id="obo-assessment"
>
  <div
    className="untested"
  >
    <div
      className="component obojobo-draft--pages--page"
      data-focussed={false}
      data-id="page"
      data-obo-component={true}
      data-type="ObojoboDraft.Pages.Page"
      id="obo-page"
    >
      <div
        className="component"
        data-focussed={false}
        data-id="child"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.Text"
        id="obo-child"
      >
        <div
          className="text-chunk obojobo-draft--chunks--single-text pad"
        >
          <span
            className="text align-left"
            data-group-index={0}
            data-indent={0}
          >
            <span>
              <span>
                <span>
                  You have  attempts remaining out of .
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Assessment Assessment page changes when attempt started and submitted 1`] = `
<div
  className="component obojobo-draft--sections--assessment"
  data-focussed={false}
  data-id="assessment"
  data-obo-component={true}
  data-type="ObojoboDraft.Sections.Assessment"
  id="obo-assessment"
>
  <div
    className="untested"
  >
    <div
      className="component obojobo-draft--pages--page"
      data-focussed={false}
      data-id="page"
      data-obo-component={true}
      data-type="ObojoboDraft.Pages.Page"
      id="obo-page"
    >
      <div
        className="component"
        data-focussed={false}
        data-id="child"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.Text"
        id="obo-child"
      >
        <div
          className="text-chunk obojobo-draft--chunks--single-text pad"
        >
          <span
            className="text align-left"
            data-group-index={0}
            data-indent={0}
          >
            <span>
              <span>
                <span>
                  You have unlimited attempts remaining out of unlimited.
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Assessment Assessment page changes when attempt started and submitted 2`] = `
<div
  className="component obojobo-draft--sections--assessment"
  data-focussed={false}
  data-id="assessment"
  data-obo-component={true}
  data-type="ObojoboDraft.Sections.Assessment"
  id="obo-assessment"
>
  <div
    className="test"
  >
    <div
      className="component obojobo-draft--chunks--question-bank"
      data-focussed={false}
      data-id="QuestionBank"
      data-obo-component={true}
      data-type="ObojoboDraft.Chunks.QuestionBank"
      id="obo-QuestionBank"
    >
      <div
        className="component flip-container obojobo-draft--chunks--question is-hidden is-practice"
        data-focussed={false}
        data-id="question1"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.Question"
        id="obo-question1"
      >
        <div
          className="flipper"
        >
          <div
            className="content back"
          >
            <div
              className="obojobo-draft--chunks--mc-question--content"
            >
              <div
                className="component"
                data-focussed={false}
                data-id="question1-text1"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.Text"
                id="obo-question1-text1"
              >
                <div
                  className="text-chunk obojobo-draft--chunks--single-text pad"
                >
                  <span
                    className="text align-left"
                    data-group-index={0}
                    data-indent={0}
                  >
                    <span>
                      <span>
                        <span>
                          Question Text
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <form
              className="component obojobo-draft--chunks--mc-assessment is-response-type- is-not-revealing-all is-unscored"
              data-focussed={false}
              data-id="question1-mcassessment1"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.MCAssessment"
              id="obo-question1-mcassessment1"
              onClick={[Function]}
            >
              <span
                className="instructions"
              />
              <div
                className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-incorrect"
                data-choice-label="A"
                data-focussed={false}
                data-id="question1-mcassessment1-choice1"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
                id="obo-question1-mcassessment1-choice1"
              >
                <input
                  checked={false}
                  name="question1-mcassessment1"
                  onChange={[Function]}
                  type="radio"
                  value="question1-mcassessment1-choice1"
                />
                <div
                  className="children"
                >
                  <div
                    className="component obojobo-draft--chunks--mc-assessment--mc-answer"
                    data-focussed={false}
                    data-id="question1-mcassessment1-choice1-answer1"
                    data-obo-component={true}
                    data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
                    id="obo-question1-mcassessment1-choice1-answer1"
                  />
                </div>
              </div>
              <div
                className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-incorrect"
                data-choice-label="B"
                data-focussed={false}
                data-id="question1-mcassessment1-choice2"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
                id="obo-question1-mcassessment1-choice2"
              >
                <input
                  checked={false}
                  name="question1-mcassessment1"
                  onChange={[Function]}
                  type="radio"
                  value="question1-mcassessment1-choice2"
                />
                <div
                  className="children"
                >
                  <div
                    className="component obojobo-draft--chunks--mc-assessment--mc-answer"
                    data-focussed={false}
                    data-id="question1-mcassessment1-choice2-answer1"
                    data-obo-component={true}
                    data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
                    id="obo-question1-mcassessment1-choice2-answer1"
                  />
                </div>
              </div>
              <div
                className="submit"
              >
                <div
                  className="obojobo-draft--components--button align-center"
                >
                  <button
                    disabled={true}
                    onClick={[Function]}
                    tabIndex={undefined}
                  >
                    Check Your Answer
                  </button>
                </div>
              </div>
              <div />
            </form>
          </div>
          <div
            className="blocker front"
            onClick={[Function]}
          >
            <div
              className="obojobo-draft--components--button align-center"
            >
              <button
                disabled={undefined}
                onClick={undefined}
                tabIndex={undefined}
              >
                Try Question
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="component flip-container obojobo-draft--chunks--question is-hidden is-practice"
        data-focussed={false}
        data-id="question2"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.Question"
        id="obo-question2"
      >
        <div
          className="flipper"
        >
          <div
            className="content back"
          >
            <div
              className="obojobo-draft--chunks--mc-question--content"
            >
              <div
                className="component"
                data-focussed={false}
                data-id="question2-text1"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.Text"
                id="obo-question2-text1"
              >
                <div
                  className="text-chunk obojobo-draft--chunks--single-text pad"
                >
                  <span
                    className="text align-left"
                    data-group-index={0}
                    data-indent={0}
                  >
                    <span>
                      <span>
                        <span>
                          Question Text
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <form
              className="component obojobo-draft--chunks--mc-assessment is-response-type- is-not-revealing-all is-unscored"
              data-focussed={false}
              data-id="question2-mcassessment1"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.MCAssessment"
              id="obo-question2-mcassessment1"
              onClick={[Function]}
            >
              <span
                className="instructions"
              />
              <div
                className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-incorrect"
                data-choice-label="A"
                data-focussed={false}
                data-id="question2-mcassessment1-choice1"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
                id="obo-question2-mcassessment1-choice1"
              >
                <input
                  checked={false}
                  name="question2-mcassessment1"
                  onChange={[Function]}
                  type="radio"
                  value="question2-mcassessment1-choice1"
                />
                <div
                  className="children"
                >
                  <div
                    className="component obojobo-draft--chunks--mc-assessment--mc-answer"
                    data-focussed={false}
                    data-id="question2-mcassessment1-choice1-answer1"
                    data-obo-component={true}
                    data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
                    id="obo-question2-mcassessment1-choice1-answer1"
                  />
                </div>
              </div>
              <div
                className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-incorrect"
                data-choice-label="B"
                data-focussed={false}
                data-id="question2-mcassessment1-choice2"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
                id="obo-question2-mcassessment1-choice2"
              >
                <input
                  checked={false}
                  name="question2-mcassessment1"
                  onChange={[Function]}
                  type="radio"
                  value="question2-mcassessment1-choice2"
                />
                <div
                  className="children"
                >
                  <div
                    className="component obojobo-draft--chunks--mc-assessment--mc-answer"
                    data-focussed={false}
                    data-id="question2-mcassessment1-choice2-answer1"
                    data-obo-component={true}
                    data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
                    id="obo-question2-mcassessment1-choice2-answer1"
                  />
                </div>
              </div>
              <div
                className="submit"
              >
                <div
                  className="obojobo-draft--components--button align-center"
                >
                  <button
                    disabled={true}
                    onClick={[Function]}
                    tabIndex={undefined}
                  >
                    Check Your Answer
                  </button>
                </div>
              </div>
              <div />
            </form>
          </div>
          <div
            className="blocker front"
            onClick={[Function]}
          >
            <div
              className="obojobo-draft--components--button align-center"
            >
              <button
                disabled={undefined}
                onClick={undefined}
                tabIndex={undefined}
              >
                Try Question
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="submit-button"
    >
      <div
        className="obojobo-draft--components--button align-center"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Assessment Assessment page changes when attempt started and submitted 3`] = `
<div
  className="component obojobo-draft--sections--assessment"
  data-focussed={false}
  data-id="assessment"
  data-obo-component={true}
  data-type="ObojoboDraft.Sections.Assessment"
  id="obo-assessment"
>
  <div
    className="score unlock"
  >
    <h1>
      Your score is 50%
    </h1>
    <h2>
      This is your highest score
    </h2>
    <p>
      
    </p>
    <div
      className="review"
    >
      <p
        className="number-correct"
      >
        You got 1 out of 2 questions correct:
      </p>
      <div
        className="is-correct"
      >
        <p>
          Question 1 - Correct:
        </p>
        <div
          className="component flip-container obojobo-draft--chunks--question is-active is-practice"
          data-focussed={false}
          data-id="question1"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Question"
          id="obo-question1"
        >
          <div
            className="flipper"
          >
            <div
              className="content back"
            >
              <div
                className="obojobo-draft--chunks--mc-question--content"
              >
                <div
                  className="component"
                  data-focussed={false}
                  data-id="question1-text1"
                  data-obo-component={true}
                  data-type="ObojoboDraft.Chunks.Text"
                  id="obo-question1-text1"
                >
                  <div
                    className="text-chunk obojobo-draft--chunks--single-text pad"
                  >
                    <span
                      className="text align-left"
                      data-group-index={0}
                      data-indent={0}
                    >
                      <span>
                        <span>
                          <span>
                            Question Text
                          </span>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="pad responses-hidden"
              >
                (Responses Hidden)
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="is-not-correct"
      >
        <p>
          Question 2 - Incorrect:
        </p>
        <div
          className="component flip-container obojobo-draft--chunks--question is-active is-practice"
          data-focussed={false}
          data-id="question2"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Question"
          id="obo-question2"
        >
          <div
            className="flipper"
          >
            <div
              className="content back"
            >
              <div
                className="obojobo-draft--chunks--mc-question--content"
              >
                <div
                  className="component"
                  data-focussed={false}
                  data-id="question2-text1"
                  data-obo-component={true}
                  data-type="ObojoboDraft.Chunks.Text"
                  id="obo-question2-text1"
                >
                  <div
                    className="text-chunk obojobo-draft--chunks--single-text pad"
                  >
                    <span
                      className="text align-left"
                      data-group-index={0}
                      data-indent={0}
                    >
                      <span>
                        <span>
                          <span>
                            Question Text
                          </span>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="pad responses-hidden"
              >
                (Responses Hidden)
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Assessment Assessment page changes when attempt started and submitted 4`] = `
<div
  className="component obojobo-draft--sections--assessment"
  data-focussed={false}
  data-id="assessment"
  data-obo-component={true}
  data-type="ObojoboDraft.Sections.Assessment"
  id="obo-assessment"
>
  <div
    className="score unlock"
  >
    <h1>
      Your score is 0%
    </h1>
    <h2>
      Your highest score was 50%
    </h2>
    <p>
      
    </p>
    <div
      className="review"
    >
      <p
        className="number-correct"
      >
        You got 0 out of 2 questions correct:
      </p>
      <div
        className="is-not-correct"
      >
        <p>
          Question 1 - Incorrect:
        </p>
        <div
          className="component flip-container obojobo-draft--chunks--question is-active is-practice"
          data-focussed={false}
          data-id="question1"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Question"
          id="obo-question1"
        >
          <div
            className="flipper"
          >
            <div
              className="content back"
            >
              <div
                className="obojobo-draft--chunks--mc-question--content"
              >
                <div
                  className="component"
                  data-focussed={false}
                  data-id="question1-text1"
                  data-obo-component={true}
                  data-type="ObojoboDraft.Chunks.Text"
                  id="obo-question1-text1"
                >
                  <div
                    className="text-chunk obojobo-draft--chunks--single-text pad"
                  >
                    <span
                      className="text align-left"
                      data-group-index={0}
                      data-indent={0}
                    >
                      <span>
                        <span>
                          <span>
                            Question Text
                          </span>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="pad responses-hidden"
              >
                (Responses Hidden)
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="is-not-correct"
      >
        <p>
          Question 2 - Incorrect:
        </p>
        <div
          className="component flip-container obojobo-draft--chunks--question is-active is-practice"
          data-focussed={false}
          data-id="question2"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Question"
          id="obo-question2"
        >
          <div
            className="flipper"
          >
            <div
              className="content back"
            >
              <div
                className="obojobo-draft--chunks--mc-question--content"
              >
                <div
                  className="component"
                  data-focussed={false}
                  data-id="question2-text1"
                  data-obo-component={true}
                  data-type="ObojoboDraft.Chunks.Text"
                  id="obo-question2-text1"
                >
                  <div
                    className="text-chunk obojobo-draft--chunks--single-text pad"
                  >
                    <span
                      className="text align-left"
                      data-group-index={0}
                      data-indent={0}
                    >
                      <span>
                        <span>
                          <span>
                            Question Text
                          </span>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="pad responses-hidden"
              >
                (Responses Hidden)
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Assessment Assessment page changes when attempt started and submitted 5`] = `
<div
  className="component obojobo-draft--sections--assessment"
  data-focussed={false}
  data-id="assessment"
  data-obo-component={true}
  data-type="ObojoboDraft.Sections.Assessment"
  id="obo-assessment"
>
  <div
    className="score unlock"
  >
    <h1>
      Your score is 100%
    </h1>
    <h2>
      This is your highest score
    </h2>
    <p>
      
    </p>
    <div
      className="review"
    >
      <p
        className="number-correct"
      >
        You got 2 out of 2 questions correct:
      </p>
      <div
        className="is-correct"
      >
        <p>
          Question 1 - Correct:
        </p>
        <div
          className="component flip-container obojobo-draft--chunks--question is-active is-practice"
          data-focussed={false}
          data-id="question1"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Question"
          id="obo-question1"
        >
          <div
            className="flipper"
          >
            <div
              className="content back"
            >
              <div
                className="obojobo-draft--chunks--mc-question--content"
              >
                <div
                  className="component"
                  data-focussed={false}
                  data-id="question1-text1"
                  data-obo-component={true}
                  data-type="ObojoboDraft.Chunks.Text"
                  id="obo-question1-text1"
                >
                  <div
                    className="text-chunk obojobo-draft--chunks--single-text pad"
                  >
                    <span
                      className="text align-left"
                      data-group-index={0}
                      data-indent={0}
                    >
                      <span>
                        <span>
                          <span>
                            Question Text
                          </span>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="pad responses-hidden"
              >
                (Responses Hidden)
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="is-correct"
      >
        <p>
          Question 2 - Correct:
        </p>
        <div
          className="component flip-container obojobo-draft--chunks--question is-active is-practice"
          data-focussed={false}
          data-id="question2"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Question"
          id="obo-question2"
        >
          <div
            className="flipper"
          >
            <div
              className="content back"
            >
              <div
                className="obojobo-draft--chunks--mc-question--content"
              >
                <div
                  className="component"
                  data-focussed={false}
                  data-id="question2-text1"
                  data-obo-component={true}
                  data-type="ObojoboDraft.Chunks.Text"
                  id="obo-question2-text1"
                >
                  <div
                    className="text-chunk obojobo-draft--chunks--single-text pad"
                  >
                    <span
                      className="text align-left"
                      data-group-index={0}
                      data-indent={0}
                    >
                      <span>
                        <span>
                          <span>
                            Question Text
                          </span>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="pad responses-hidden"
              >
                (Responses Hidden)
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Assessment Assessment variable replacement 1`] = `
<div
  className="component obojobo-draft--sections--assessment"
  data-focussed={false}
  data-id="assessment"
  data-obo-component={true}
  data-type="ObojoboDraft.Sections.Assessment"
  id="obo-assessment"
>
  <div
    className="untested"
  >
    <div
      className="component obojobo-draft--pages--page"
      data-focussed={false}
      data-id="page"
      data-obo-component={true}
      data-type="ObojoboDraft.Pages.Page"
      id="obo-page"
    >
      <div
        className="component"
        data-focussed={false}
        data-id="child"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.Text"
        id="obo-child"
      >
        <div
          className="text-chunk obojobo-draft--chunks--single-text pad"
        >
          <span
            className="text align-left"
            data-group-index={0}
            data-indent={0}
          >
            <span>
              <span>
                <span>
                  You have  attempts remaining out of .
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Assessment Assessment variable replacement 2`] = `
<div
  className="component obojobo-draft--sections--assessment"
  data-focussed={false}
  data-id="assessment"
  data-obo-component={true}
  data-type="ObojoboDraft.Sections.Assessment"
  id="obo-assessment"
>
  <div
    className="untested"
  >
    <div
      className="component obojobo-draft--pages--page"
      data-focussed={false}
      data-id="page"
      data-obo-component={true}
      data-type="ObojoboDraft.Pages.Page"
      id="obo-page"
    >
      <div
        className="component"
        data-focussed={false}
        data-id="child"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.Text"
        id="obo-child"
      >
        <div
          className="text-chunk obojobo-draft--chunks--single-text pad"
        >
          <span
            className="text align-left"
            data-group-index={0}
            data-indent={0}
          >
            <span>
              <span>
                <span>
                  You have 3 attempts remaining out of 3.
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Assessment Assessment variable replacement 3`] = `
<div
  className="component obojobo-draft--sections--assessment"
  data-focussed={false}
  data-id="assessment"
  data-obo-component={true}
  data-type="ObojoboDraft.Sections.Assessment"
  id="obo-assessment"
>
  <div
    className="untested"
  >
    <div
      className="component obojobo-draft--pages--page"
      data-focussed={false}
      data-id="page"
      data-obo-component={true}
      data-type="ObojoboDraft.Pages.Page"
      id="obo-page"
    >
      <div
        className="component"
        data-focussed={false}
        data-id="child"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.Text"
        id="obo-child"
      >
        <div
          className="text-chunk obojobo-draft--chunks--single-text pad"
        >
          <span
            className="text align-left"
            data-group-index={0}
            data-indent={0}
          >
            <span>
              <span>
                <span>
                  You have unlimited attempts remaining out of unlimited.
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
